--- a/QRScanner/Base.lproj/Main.storyboard
+++ b/QRScanner/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="C6g-ck-S33">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Scanner View Controller-->
+        <!--QRScanner by Procodific-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="QRScannerViewController" customModule="QRScanner" customModuleProvider="target" sceneMemberID="viewController">
@@ -39,12 +39,66 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="PvR-Bv-4Zf" secondAttribute="bottom" id="H6A-Ji-0FL"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="QRScanner by Procodific" id="UkG-wA-hvx"/>
                     <connections>
                         <outlet property="messageLabel" destination="PvR-Bv-4Zf" id="2p0-mu-11X"/>
+                        <segue destination="1TF-Xt-dig" kind="show" identifier="" id="ymZ-LA-S7n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="964" y="36.431784107946029"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="5M3-qA-Leh">
+            <objects>
+                <viewController storyboardIdentifier="PDFWebViewController" id="1TF-Xt-dig" customClass="PDFWebViewController" customModule="QRScanner" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tx7-qm-jXW"/>
+                        <viewControllerLayoutGuide type="bottom" id="uaT-qq-oyJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QY4-N0-q3Y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1D6-jg-F95">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uaT-qq-oyJ" firstAttribute="top" secondItem="1D6-jg-F95" secondAttribute="bottom" id="h0i-D8-efq"/>
+                            <constraint firstAttribute="trailing" secondItem="1D6-jg-F95" secondAttribute="trailing" id="qmG-nK-AkB"/>
+                            <constraint firstItem="1D6-jg-F95" firstAttribute="top" secondItem="tx7-qm-jXW" secondAttribute="bottom" id="rLy-tv-h1V"/>
+                            <constraint firstItem="1D6-jg-F95" firstAttribute="leading" secondItem="QY4-N0-q3Y" secondAttribute="leading" id="wwh-zh-OoA"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="1D6-jg-F95" id="GtX-m4-Gpt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ti7-gc-Tif" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1808.8" y="34.632683658170919"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jH6-15-QsO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="C6g-ck-S33" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uaB-lc-baX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ryU-Od-TdO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YRS-YH-dMy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-31" y="36"/>
         </scene>
     </scenes>
 </document>
