feat(storyboard): added DetailsViewController

--- a/QRScanner/Base.lproj/Main.storyboard
+++ b/QRScanner/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,12 +25,99 @@
                     </view>
                     <navigationItem key="navigationItem" title="QRScanner by Procodific" id="UkG-wA-hvx"/>
                     <connections>
-                        <segue destination="1TF-Xt-dig" kind="show" identifier="webViewSegue" id="ymZ-LA-S7n"/>
+                        <segue destination="6Ku-0A-0H4" kind="show" id="Mfi-qx-MbS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="964" y="36.431784107946029"/>
+        </scene>
+        <!--Details View Controller-->
+        <scene sceneID="OA4-J1-JQK">
+            <objects>
+                <viewController storyboardIdentifier="DetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6Ku-0A-0H4" customClass="DetailsViewController" customModule="QRScanner" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ccA-2n-HCP"/>
+                        <viewControllerLayoutGuide type="bottom" id="1IQ-1E-1Vh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HnT-db-SLW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUn-Uu-BQZ">
+                                <rect key="frame" x="0.0" y="567" width="375" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="CUn-Uu-BQZ" secondAttribute="height" multiplier="15:4" id="QB9-Rt-pNL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Open PDF"/>
+                                <connections>
+                                    <action selector="openPdf:" destination="6Ku-0A-0H4" eventType="touchUpInside" id="zh7-rC-FOR"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CONSTANCIA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PE0-99-zK4">
+                                <rect key="frame" x="134" y="297" width="107" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taller: Uso y lectura de rúbricas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WmD-Lc-gKi">
+                                <rect key="frame" x="66" y="323" width="242" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 al 14 de agosto de 2015" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="blX-hM-3IA">
+                                <rect key="frame" x="89" y="355" width="197" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20 horas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CDd-LD-Pzs">
+                                <rect key="frame" x="153" y="384" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ricardo Reyes González" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dpc-8d-jBh">
+                                <rect key="frame" x="95" y="413" width="185" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detalles del Documento:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e3B-tb-RN8">
+                                <rect key="frame" x="77.5" y="232" width="220" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CDd-LD-Pzs" firstAttribute="centerX" secondItem="blX-hM-3IA" secondAttribute="centerX" id="0nN-rD-mF7"/>
+                            <constraint firstAttribute="trailing" secondItem="CUn-Uu-BQZ" secondAttribute="trailing" id="2mW-r7-oUa"/>
+                            <constraint firstItem="WmD-Lc-gKi" firstAttribute="top" secondItem="PE0-99-zK4" secondAttribute="bottom" constant="5" id="6Zw-Ao-b5e"/>
+                            <constraint firstItem="CUn-Uu-BQZ" firstAttribute="leading" secondItem="HnT-db-SLW" secondAttribute="leading" id="6pG-Fl-xDY"/>
+                            <constraint firstItem="WmD-Lc-gKi" firstAttribute="centerY" secondItem="HnT-db-SLW" secondAttribute="centerY" id="Hi5-vE-soC"/>
+                            <constraint firstItem="blX-hM-3IA" firstAttribute="top" secondItem="WmD-Lc-gKi" secondAttribute="bottom" constant="11" id="OAi-46-aDQ"/>
+                            <constraint firstItem="PE0-99-zK4" firstAttribute="top" secondItem="e3B-tb-RN8" secondAttribute="bottom" constant="41" id="OYq-h5-xeM"/>
+                            <constraint firstItem="1IQ-1E-1Vh" firstAttribute="top" secondItem="CUn-Uu-BQZ" secondAttribute="bottom" id="QWd-xl-Ols"/>
+                            <constraint firstItem="e3B-tb-RN8" firstAttribute="centerX" secondItem="PE0-99-zK4" secondAttribute="centerX" id="SOh-xJ-B0y"/>
+                            <constraint firstItem="Dpc-8d-jBh" firstAttribute="centerX" secondItem="CDd-LD-Pzs" secondAttribute="centerX" id="Ww5-Tf-TuO"/>
+                            <constraint firstItem="Dpc-8d-jBh" firstAttribute="top" secondItem="CDd-LD-Pzs" secondAttribute="bottom" constant="8" id="Xz3-K9-uSR"/>
+                            <constraint firstItem="WmD-Lc-gKi" firstAttribute="centerX" secondItem="HnT-db-SLW" secondAttribute="centerX" id="gEy-mA-hxw"/>
+                            <constraint firstItem="PE0-99-zK4" firstAttribute="centerX" secondItem="WmD-Lc-gKi" secondAttribute="centerX" id="hZi-PI-CyQ"/>
+                            <constraint firstItem="CDd-LD-Pzs" firstAttribute="top" secondItem="blX-hM-3IA" secondAttribute="bottom" constant="8" id="huu-Pn-kNl"/>
+                            <constraint firstItem="blX-hM-3IA" firstAttribute="centerX" secondItem="WmD-Lc-gKi" secondAttribute="centerX" id="rzz-Bi-5OQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="1TF-Xt-dig" kind="show" id="UIP-Rx-mLr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dQG-X8-a1s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1844" y="35.532233883058474"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="5M3-qA-Leh">
@@ -44,7 +132,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1D6-jg-F95">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                         </subviews>
@@ -52,7 +140,7 @@
                         <constraints>
                             <constraint firstItem="uaT-qq-oyJ" firstAttribute="top" secondItem="1D6-jg-F95" secondAttribute="bottom" id="h0i-D8-efq"/>
                             <constraint firstAttribute="trailing" secondItem="1D6-jg-F95" secondAttribute="trailing" id="qmG-nK-AkB"/>
-                            <constraint firstItem="1D6-jg-F95" firstAttribute="top" secondItem="tx7-qm-jXW" secondAttribute="bottom" id="rLy-tv-h1V"/>
+                            <constraint firstItem="1D6-jg-F95" firstAttribute="top" secondItem="tx7-qm-jXW" secondAttribute="bottom" constant="-64" id="rLy-tv-h1V"/>
                             <constraint firstItem="1D6-jg-F95" firstAttribute="leading" secondItem="QY4-N0-q3Y" secondAttribute="leading" id="wwh-zh-OoA"/>
                         </constraints>
                     </view>
@@ -62,7 +150,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ti7-gc-Tif" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1808.8" y="34.632683658170919"/>
+            <point key="canvasLocation" x="2688.8000000000002" y="35.532233883058474"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jH6-15-QsO">
