--- a/QRScanner/Base.lproj/LaunchScreen.storyboard
+++ b/QRScanner/Base.lproj/LaunchScreen.storyboard
@@ -22,28 +22,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="86X-Gc-9rL">
-                                <rect key="frame" x="16" y="296.5" width="343" height="75.5"/>
-                                <string key="text">Verificación 
-de
-Documentos Originales Digitales</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="me4-Wq-GLv">
-                                <rect key="frame" x="16" y="28" width="343" height="123"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoVerticalJpg" highlightedImage="logoVerticalJpg" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="me4-Wq-GLv">
+                                <rect key="frame" x="46" y="120" width="313" height="426"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="86X-Gc-9rL" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="5bZ-Zq-RwZ"/>
-                            <constraint firstItem="86X-Gc-9rL" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="AQd-lE-3aQ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="86X-Gc-9rL" secondAttribute="trailing" id="KcB-Kj-5F2"/>
-                            <constraint firstItem="me4-Wq-GLv" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="S7g-1A-oYu"/>
-                            <constraint firstItem="me4-Wq-GLv" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="SoM-ke-nDR"/>
-                            <constraint firstItem="86X-Gc-9rL" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="XI5-hz-2yb"/>
-                            <constraint firstItem="me4-Wq-GLv" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" symbolic="YES" id="h23-Km-7Bm"/>
+                            <constraint firstItem="me4-Wq-GLv" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="30" id="NnZ-GS-mVS"/>
+                            <constraint firstItem="me4-Wq-GLv" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="U0d-BO-ASP"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="me4-Wq-GLv" secondAttribute="bottom" constant="121" id="ZrE-PI-eac"/>
+                            <constraint firstItem="me4-Wq-GLv" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="100" id="g49-QK-cnE"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -53,6 +41,6 @@ Documentos Originales Digitales</string>
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="969" height="123"/>
+        <image name="logoVerticalJpg" width="692" height="945"/>
     </resources>
 </document>
