--- a/QRScanner/Base.lproj/Main.storyboard
+++ b/QRScanner/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--QRScanner by Procodific-->
+        <!--Scanner View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="QRScannerViewController" customModule="QRScanner" customModuleProvider="target" sceneMemberID="viewController">
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="QRScanner by Procodific" id="UkG-wA-hvx"/>
+                    <navigationItem key="navigationItem" id="UkG-wA-hvx"/>
                     <connections>
                         <segue destination="6Ku-0A-0H4" kind="show" identifier="docDetailSegue" id="Mfi-qx-MbS"/>
                     </connections>
@@ -124,7 +124,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1D6-jg-F95">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                         </subviews>
@@ -132,7 +132,7 @@
                         <constraints>
                             <constraint firstItem="uaT-qq-oyJ" firstAttribute="top" secondItem="1D6-jg-F95" secondAttribute="bottom" id="h0i-D8-efq"/>
                             <constraint firstAttribute="trailing" secondItem="1D6-jg-F95" secondAttribute="trailing" id="qmG-nK-AkB"/>
-                            <constraint firstItem="1D6-jg-F95" firstAttribute="top" secondItem="tx7-qm-jXW" secondAttribute="bottom" constant="-64" id="rLy-tv-h1V"/>
+                            <constraint firstItem="1D6-jg-F95" firstAttribute="top" secondItem="tx7-qm-jXW" secondAttribute="bottom" id="rLy-tv-h1V"/>
                             <constraint firstItem="1D6-jg-F95" firstAttribute="leading" secondItem="QY4-N0-q3Y" secondAttribute="leading" id="wwh-zh-OoA"/>
                         </constraints>
                     </view>
